--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -2,6 +2,12 @@
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
 name: Unit Tests
+
+permissions:
+  contents: read
+  actions: read
+  checks: write
+
 on:
   pull_request:
     types: [ opened, synchronize ]
