--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,12 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 
-name: Unit Tests
-
-permissions:
-  contents: read
-  actions: read
-  checks: write
+name: Release
 
 on:
   workflow_dispatch:
@@ -15,7 +10,7 @@ on:
         description: 배포 버전 (ex. 1.0.0)
 
 jobs:
-  unit-tests:
+  release:
     runs-on: ubuntu-latest
 
     steps:
