Add buildTransitive for ProjectReference

--- a/src/System.CommandLine.SourceGenerator/System.CommandLine.SourceGenerator.csproj
+++ b/src/System.CommandLine.SourceGenerator/System.CommandLine.SourceGenerator.csproj
@@ -41,6 +41,10 @@
             <PackagePath>analyzers/dotnet/cs</PackagePath>
             <Visible>false</Visible>
         </None>
+        <None Include="buildTransitive/**/*.targets">
+            <Pack>true</Pack>
+            <PackagePath>buildTransitive</PackagePath>
+        </None>
     </ItemGroup>
 
     <ItemGroup>
